# portfolio-optimization

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  tickers.csv
.github/workflows/: ci.yml
docs/: optimizer_specs.md  test_specs.md
src/: __init__.py  analytics.py  backtester.py  ingestion.py  math_engine.py  mock_data.py  optimizer.py  tickers.py  visualization.py
tests/: test_analytics.py  test_backtester.py  test_ingestion.py  test_math_engine.py  test_optimizer.py
